G1DummyRegionsPerGC fires assert of assert(words <= filler_array_max_size()) failed: too big for a single object

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P5
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b96

      VM tries to add dummy regions with humongous object on non-product build but filler_array_max_size is limited to humongous threshold.

      assert(words <= filler_array_max_size(), "too big for a single object") from CollectedHeap::fill_with_object_impl().



            Assignee:
            Sangheon Kim (Inactive)
            Reporter:
            Sangheon Kim (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: