8134631: G1DummyRegionsPerGC fires assert of assert(words <= filler_array_max_size()) failed: too big for a single object

Change filler max value temporarily for G1DummyRegionsPerGC flag.

Reviewed-by: tbenson, tschatzl